--- a/CountriesAPI/MainWindow.xaml
+++ b/CountriesAPI/MainWindow.xaml
@@ -25,9 +25,6 @@
 
         <StackPanel Grid.Column="1" HorizontalAlignment="Left" Height="433" Margin="10,22,0,0" Grid.Row="1" VerticalAlignment="Top" Width="430">
             <Image x:Name="image_source"  Height="192"/>
-            <Label x:Name="lb_status"  Content="Label" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="LightGray"/>
-            <Label x:Name="lb_result"  Content="Label" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="LightGray" RenderTransformOrigin="0.5,0.5"/>
-            <StackPanel Height="436" Margin="-455,0,0,0"/>
         </StackPanel>
         <StackPanel HorizontalAlignment="Left" Height="443" Margin="10,22,0,0" Grid.Row="1" VerticalAlignment="Top" Width="430">
             <Label Margin="0,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Please select a country" FontFamily="Verdana" Foreground="LightGray"/>
@@ -45,10 +42,48 @@
             <Label x:Name="lb_population" Content="" FontFamily="Verdana" Foreground="Yellow" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" />
             <Label Content="Gini Index:" Margin="176,5,167,0" FontFamily="Verdana" Foreground="LightGray" VerticalAlignment="Center" HorizontalAlignment="Center" Width="87"/>
             <Label x:Name="lb_gini" Content="" FontFamily="Verdana" Foreground="Yellow" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" />
+
+            <StackPanel Orientation="Horizontal"
+                        Margin="0,15,0,0"/>
         </StackPanel>
+
+        <StackPanel Orientation="Horizontal"
+                        Margin="0,15,0,0"/>
 
         <StackPanel x:Name="start" Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="500" 
                     Margin="-5,0,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="895"/>
+        <Button x:Name="btn_quit" Content="Quit"
+                        Foreground="White"
+                        FontSize="14"
+                        FontWeight="Medium"
+                        Margin="292,26,58,23" Click="Button_Click" Grid.Column="1" Grid.Row="2">
+            <Button.Style>
+                <Style TargetType="{x:Type Button}">
+                    <Setter Property="TextElement.FontFamily" Value="Verdana"/>
+                    <Setter Property="Background" Value="#FE6584"/>
+                    <Setter Property="Cursor" Value="Hand"/>
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="#FF4C70"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+
+            <Button.Template>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border Width="100" Height="25"
+                                    CornerRadius="12"
+                                    Background="{TemplateBinding Background}">
+                        <ContentPresenter VerticalAlignment="Center"
+                                                  HorizontalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+
+        </Button>
+        <Label x:Name="lb_result" Content="" HorizontalAlignment="Left" Margin="40,10,0,0" Grid.Row="2" VerticalAlignment="Top"/>
+        <Label x:Name="lb_status" Content="" HorizontalAlignment="Left" Margin="40,42,0,0" Grid.Row="2" VerticalAlignment="Top"/>
 
     </Grid>
 
